turned off hovering a-href italics to fix spacing issues

--- a/assets/style.scss
+++ b/assets/style.scss
@@ -79,7 +79,7 @@ a {
 
     &:hover {
       color: $hover-link-color;
-      font-style: italic;
+      //font-style: italic;
       text-decoration: underline;
     }
 }
